# ha-goodwe-dt

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/goodwe/: __init__.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  number.py  sensor.py  strings.json
custom_components/goodwe/goodwe_dt_lib/: __init__.py  const.py  crc.py  exceptions.py  inverter.py  modbus.py  protocol.py  recovery.py  registers.py  sensors.py  settings.py
docs/: dt-register-map.md  gw_baseline.json  gw_device_info.json
scripts/: diff_against_baseline.py  night_soak_standalone.py
tests/: test_crc.py  test_inverter.py  test_modbus.py  test_protocol.py  test_recovery.py  test_registers.py  test_sensors.py  test_settings.py
