[project]
name = "goodwe-dt"
version = "1.0.0"
description = "DT-only, UDP-only GoodWe inverter comms + Home Assistant integration with night-sleep recovery"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["custom_components/goodwe"]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
